Refactor CSS styles for search results table and add Glide.js library

--- a/src/pages/PORTAL/faq.html
+++ b/src/pages/PORTAL/faq.html
@@ -86,6 +86,13 @@
             "data": "5"
           }'
             ></include>
+            <include
+              src="faqs/faq_7.html"
+              locals='{
+          "cls": "",
+          "data": "6"
+        }'
+            ></include>
           </ul>
         </div>
       </div>
