--- a/src/pages/PORTAL/contrasena.html
+++ b/src/pages/PORTAL/contrasena.html
@@ -47,6 +47,11 @@
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inter_content">
           <div class="pa__forms">
+            <div class="alert alert-success mb-4" role="alert">
+              <i class="fa-regular fa-circle-check"></i>
+              <span>Tu contraseña ha sido actualizada con éxito. </span>
+            </div>
+
             <div class="alert" role="alert">
               <svg
                 class="stroke-info shrink-0 w-6 h-6"
@@ -66,6 +71,7 @@
                 actualizar tu contraseña
               </span>
             </div>
+
             <p class="pa__forms_msg">
               <b>Fecha y hora de la última actualización:</b> 2024-02-12
               16:23:45
