--- a/src/pages/asulado_te_guia/index.html
+++ b/src/pages/asulado_te_guia/index.html
@@ -81,6 +81,36 @@
           <div class="ƒ grid grid-cols-1 md:grid-cols-2 grid-auto-rows gap-8">
             <div class="flex flex-col gap-4">
               <a
+                href="https://youtu.be/TCC4ZIoSbBg"
+                target="_blank"
+              >
+                <img
+                  src="/assets/images/video_5_thumb.jpg"
+                  alt="Asulado te guia"
+                  class="w-full rounded-3xl block"
+                />
+              </a>
+              <p class="text-base text-azul-bold text-center text-xl">
+                <b>Lusa</b>, llegó a WhatsApp!
+              </p>
+            </div>
+            <div class="flex flex-col gap-4">
+              <a
+                href="https://youtu.be/pXhbARCSZWo"
+                target="_blank"
+              >
+                <img
+                  src="/assets/images/video_6_thumb.jpg"
+                  alt="Asulado te guia"
+                  class="w-full rounded-3xl block"
+                />
+              </a>
+              <p class="text-base text-azul-bold text-center text-xl">
+                ¿Cómo saber si estás hablando a nuestra línea oficial de WhatsApp?
+              </p>
+            </div>
+            <div class="flex flex-col gap-4">
+              <a
                 href="https://www.youtube.com/watch?v=KMv0bezpE4A&list=PLOQZWsm0dD6gjtenXVqc6wA-aGjpm9KKP&index=4"
                 target="_blank"
               >
