--- a/src/pages/asulado_te_guia/index.html
+++ b/src/pages/asulado_te_guia/index.html
@@ -91,7 +91,7 @@
                 />
               </a>
               <p class="text-base text-azul-bold text-center text-xl">
-                <b>Lusa</b>, llegó a WhatsApp!
+                <b>Lusa</b>, llegó a WhatsApp
               </p>
             </div>
             <div class="flex flex-col gap-4">
