chore: Add tour guide feature to the portal page

--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -61,6 +61,7 @@
         </div>
       </div>
     </div>
+    <!-- <div data-tg-tour="Welcome aboard 👋"></div> -->
     <div id="servicios" class="as__section pa__inner_item">
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__inner">
@@ -416,3 +417,19 @@
   </block>
   <!-- FIN CONTENIDO DEL HOME -->
 </extends>
+
+<!-- MODAL INTRO -->
+<dialog id="modal_intro" class="modal modal_intro">
+  <div class="modal-box">
+    <h3 class="text-lg font-bold">¡Felicitaciones!</h3>
+    <p class="py-4">
+      ¿Te gustaría ver la introducción nuevamente al ingresar al Portal?
+    </p>
+    <div class="modal-action">
+      <div class="form-bots">
+        <button class="btn_ok">Si</button>
+        <button id="btn-intro-close" class="btn_x">No volver a ver</button>
+      </div>
+    </div>
+  </div>
+</dialog>
