chore: Update modal intro styling in portal.html

--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -420,9 +420,9 @@
 
 <!-- MODAL INTRO -->
 <dialog id="modal_intro" class="modal modal_intro">
-  <div class="modal-box">
-    <h3 class="text-lg font-bold">¡Felicitaciones!</h3>
-    <p class="py-4">
+  <div class="modal-box text-center  ">
+    <h3 class="text-xl font-bold font-je text-azul-bold">¡Felicitaciones!</h3>
+    <p class="py-4 text-azul-dark">
       ¿Te gustaría ver la introducción nuevamente al ingresar al Portal?
     </p>
     <div class="modal-action">
