chore: Update modal intro content and styling

--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -420,15 +420,17 @@
 
 <!-- MODAL INTRO -->
 <dialog id="modal_intro" class="modal modal_intro">
-  <div class="modal-box text-center  ">
-    <h3 class="text-xl font-bold font-je text-azul-bold">¡Felicitaciones!</h3>
+  <div class="modal-box text-center">
+    <h3 class="text-xl font-bold font-je text-azul-bold">
+      ¡Ahora estás listo para navegar!
+    </h3>
     <p class="py-4 text-azul-dark">
-      ¿Te gustaría ver la introducción nuevamente al ingresar al Portal?
+      ¿Te gustaría ver el recorrido del Portal una vez más?
     </p>
     <div class="modal-action">
       <div class="form-bots">
-        <button class="btn_ok">Si</button>
-        <button id="btn-intro-close" class="btn_x">No volver a ver</button>
+        <button id="btn-intro-again" class="btn_ok">Si, iniciar</button>
+        <button id="btn-intro-close" class="btn_x">No, terminar</button>
       </div>
     </div>
   </div>
