--- a/src/pages/PORTAL/faq_2.html
+++ b/src/pages/PORTAL/faq_2.html
@@ -42,7 +42,7 @@
     <div id="servicios" class="as__section pa__options pa__faqs">
       <div class="as__section_wrapper">
         <div class="as__section_content_full pa__option">
-          <ul class="act_1">
+          <ul class="act_2">
             <include
               src="PORTAL/p_link_faq.html"
               locals='{ 
@@ -72,7 +72,7 @@
       </div>
     </div>
     <include
-      src="PORTAL/faqs/tabs_1.html"
+      src="PORTAL/faqs/tabs_2.html"
       locals='{"cls":"", "act": 1}'
     ></include>
     <section id="faqs_contenido" class="as__section as__g_faqs_tcon">
@@ -80,38 +80,45 @@
         <div class="as__section_content_full">
           <ul class="as__g_faqs_tcon_list">
             <include
-              src="PORTAL/faqs/faq_1_1.html"
+              src="PORTAL/faqs/faq_2_1.html"
               locals='{
                 "cls": "",
                 "data": "0"
               }'
             ></include>
             <include
-              src="PORTAL/faqs/faq_1_2.html"
+              src="PORTAL/faqs/faq_2_2.html"
               locals='{
               "cls": "",
               "data": "1"
             }'
             ></include>
             <include
-              src="PORTAL/faqs/faq_1_3.html"
+              src="PORTAL/faqs/faq_2_3.html"
               locals='{
               "cls": "",
               "data": "2"
             }'
             ></include>
             <include
-              src="PORTAL/faqs/faq_1_4.html"
+              src="PORTAL/faqs/faq_2_4.html"
               locals='{
-            "cls": "",
-            "data": "3"
-          }'
+              "cls": "",
+              "data": "3"
+            }'
             ></include>
             <include
-              src="PORTAL/faqs/faq_1_5.html"
+              src="PORTAL/faqs/faq_2_5.html"
+              locals='{
+              "cls": "",
+              "data": "4"
+            }'
+            ></include>
+            <include
+              src="PORTAL/faqs/faq_2_6.html"
               locals='{
             "cls": "",
-            "data": "4"
+            "data": "5"
           }'
             ></include>
           </ul>
