Update FAQ links in faq_2_2.html, index.html, and faq_1_2.html

--- a/src/pages/terminos/index.html
+++ b/src/pages/terminos/index.html
@@ -153,15 +153,16 @@
             <p>
               ASULADO, en el desarrollo de su objeto social y en aras de
               brindarte una oferta de servicios a tu medida, comparte tus datos
-              personales con algunos proveedores y/o aliados. Para conocerlos haz clic
+              personales con algunos proveedores y/o aliados. Para conocerlos
+              haz clic
               <a
-              href="/assets/documentos/ASULADO_Terceros_para_compartir_informacion.pdf"
-              target="_blank"
-              >aquí.</a
-            >
+                href="/assets/documentos/ASULADO_Terceros_para_compartir_informacion.pdf"
+                target="_blank"
+                >aquí.</a
+              >
             </p>
 
-           <!--<ul>
+            <!--<ul>
               <li>Protección S.A: Contratación Renta Vitalicia.</li>
 
               <li>
