--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -41,7 +41,7 @@
 
     <!-- MODAL  -->
     <!-- <label for="modal_sus" class="btn">open modal</label> -->
-    <input type="checkbox" id="modal_sus" class="modal-toggle" />
+  <!--  <input type="checkbox" id="modal_sus" class="modal-toggle" />
     <div class="modal modal_ss" role="dialog">
       <div class="modal-box">
         <form method="dialog">
@@ -70,7 +70,7 @@
         </div>
       </div>
       <label class="modal-backdrop" for="modal_sus">Cerrar</label>
-    </div>
+    </div>-->
     <!-- MODAL -->
   </block>
 
