--- a/src/pages/asulado_te_guia/index.html
+++ b/src/pages/asulado_te_guia/index.html
@@ -76,7 +76,7 @@
     </section>
     <section class="as__section bg-alpha-20 pb-20">
       <div class="as__section_wrapper small">
-        <h3 class="as__title_section pt-10 pb-10">Videos destacados</h3>
+        <h3 class="as__title_section pt-10 pb-10">Videos destacadoos</h3>
         <div class="as__section_content_full">
           <div class="ƒ grid grid-cols-1 md:grid-cols-2 grid-auto-rows gap-8">
             <div class="flex flex-col gap-4">
