--- a/src/pages/asulado_te_guia/index.html
+++ b/src/pages/asulado_te_guia/index.html
@@ -74,7 +74,7 @@
         </div>
       </div>
     </section>
-    <section class="as__section bg-alpha-20 pb-20">
+   <!-- <section class="as__section bg-alpha-20 pb-20">
       <div class="as__section_wrapper small">
         <h3 class="as__title_section pt-10 pb-10">Videos destacadoos</h3>
         <div class="as__section_content_full">
@@ -175,7 +175,37 @@
           </div>
         </div>
       </div>
+    </section>-->
+
+    <section id="am__tabs" class="as__section as_ciber">
+      <div class="as__section_wrapper">
+        <div class="as__section_content">
+          <div
+            id="tabs-ciber"
+            role="tablist"
+            class="tabs_ciber tabs tabs-boxed"
+            data-tab="0"
+          >
+            <a
+              role="tab"
+              class="tab tab-active"
+              data-tab="1"
+              href="#sobre-seguridad"
+              >Todo sobre ciberseguridad</a
+            >
+            <a role="tab" class="tab" data-tab="2" href="#recomendaciones"
+              >Recomendaciones para los canales Asulado
+            </a>
+            <!-- <a role="tab" class="tab">Gestión de riesgos</a> -->
+          </div>
+        </div>
+      </div>
     </section>
+    <include
+      src="ciber/tab_1.html"
+      locals='{ "bg":" bg-azul-light pt-0 pb-28 list_right  bg-[url(/assets/images/ciber/1.svg)] bg-center bg-contain bg-no-repeat"  }'
+    ></include>
+    <include src="ciber/tab_2.html" locals='{ "bg":""  }'></include>
 
    
 
