--- a/src/pages/asulado_te_guia/index.html
+++ b/src/pages/asulado_te_guia/index.html
@@ -202,10 +202,10 @@
       </div>
     </section>
     <include
-      src="ciber/tab_1.html"
+      src="guia/tab_1.html"
       locals='{ "bg":" bg-azul-light pt-0 pb-28 list_right  bg-[url(/assets/images/ciber/1.svg)] bg-center bg-contain bg-no-repeat"  }'
     ></include>
-    <include src="ciber/tab_2.html" locals='{ "bg":""  }'></include>
+    <include src="guia/tab_2.html" locals='{ "bg":""  }'></include>
 
    
 
