--- a/src/pages/asulado_te_guia/index.html
+++ b/src/pages/asulado_te_guia/index.html
@@ -191,10 +191,10 @@
               class="tab tab-active"
               data-tab="1"
               href="#sobre-seguridad"
-              >Todo sobre ciberseguridad</a
+              >Lusa</a
             >
             <a role="tab" class="tab" data-tab="2" href="#recomendaciones"
-              >Recomendaciones para los canales Asulado
+              >Portal Transaccional
             </a>
             <!-- <a role="tab" class="tab">Gestión de riesgos</a> -->
           </div>
