--- a/src/pages/asulado_te_guia/index.html
+++ b/src/pages/asulado_te_guia/index.html
@@ -261,8 +261,16 @@
           <aside class="hidden md:block w-full md:w-3/12">
             <ul class="flex flex-col gap-4">
               <li>
-                <span target="_blank" class="flex rounded-lg bg-white py-1 px-3 text-azul-dark text-2xl font-bold pt-5 pb-5 justify-between pl-5 pr-5">Destacados <i class="fa-solid fa-angle-right text-2xl"></i>
-                </span>
+                <a href="" target="_blank" class="flex rounded-lg bg-white py-1 px-3 text-azul-dark text-2xl font-bold pt-5 pb-5 justify-between pl-5 pr-5">Destacados <i class="fa-solid fa-angle-right text-2xl"></i>
+                </a>
+              </li>
+              <li>
+                <a href="" target="_blank" class="flex rounded-lg bg-white py-1 px-3 text-azul-dark text-2xl font-bold pt-5 pb-5 justify-between pl-5 pr-5">Lusa, tu asistente virtual <i class="fa-solid fa-angle-right text-2xl"></i>
+                </a>
+              </li>
+              <li>
+                <a href="" target="_blank" class="flex rounded-lg bg-white py-1 px-3 text-azul-dark text-2xl font-bold pt-5 pb-5 justify-between pl-5 pr-5">Portal Transaccional <i class="fa-solid fa-angle-right text-2xl"></i>
+                </a>
               </li>
             </ul>
           </aside>
