--- a/src/pages/asulado_te_guia/index.html
+++ b/src/pages/asulado_te_guia/index.html
@@ -265,7 +265,7 @@
           <aside class="hidden md:block w-full md:w-3/12">
             <ul class="flex flex-col gap-4">
               <li>
-                <a href="#tab_1" target="_blank" class="active flex rounded-lg bg-white py-1 px-3 text-azul-dark text-2xl font-bold pt-5 pb-5 justify-between pl-5 pr-5">Destacados <i class="fa-solid fa-angle-right text-2xl"></i>
+                <a href="#tab_1" target="_blank" class="active flex rounded-lg bg-white py-1 px-3 text-azul-dark text-2xl font-bold pt-5 pb-5 justify-between pl-5 pr-5">Destacados <i class="fa-sharp fa-solid fa-star"></i>
                 </a>
               </li>
               <li>
